fixed nav bar button aligns

--- a/static/app.css
+++ b/static/app.css
@@ -33,7 +33,7 @@
 .topbar {
     background: #333;
     padding-top: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 6px;
     margin-bottom: 15px;
 }
 
